<resources>
    <string name="app_name">Message Counter legacy</string>

    <string name="str_migrate_title">Attention!</string>
    <string name="str_migrate_description">
Due to circumstances beyond our control, Google Play requires us to remove the permission to read the SMS database for this app.\n\n
If you want to continue using this app, you need to install it from another source. You can export your current
configuration including Ignored Numbers and restore it later.
    </string>
    <string name="str_migrate_export">Export Configuration</string>
    <string name="str_migrate_export_description">Export current configuration</string>
    <string name="str_migrate_alternate">View alternate sources</string>
    <string name="str_migrate_alternate_description">Alternate sources for the app</string>
    <string name="str_migrate_view_details">View more details</string>
</resources>
